(library
 (name        hacl_star)
 (public_name hacl-star)
 (modules EverCrypt SharedDefs SharedFunctors AutoConfig2 Hacl)
 (libraries hacl-star-raw
            zarith)
 (preprocessor_deps config.h)
 (preprocess (action (run %{bin:cppo} %{input-file})))
 (flags (:standard -warn-error -3)))

(documentation
 (package hacl-star)
  (mld_files index))

(executable
 (name gen_dune_rules)
 (modules Gen_dune_rules))

(rule
 (mode promote)
(action
 (with-stdout-to dune.inc
 (run ./gen_dune_rules.exe))
))

(include dune.inc)

(data_only_dirs raw)
