(library
 (name        hacl_star)
 (public_name hacl-star)
 (modules EverCrypt SharedDefs SharedFunctors AutoConfig2 Hacl)
 (libraries hacl-star-raw
            zarith)
 (preprocessor_deps config.h)
 (preprocess (action (run %{bin:cppo} %{input-file})))
 (flags (:standard -warn-error -3)))

(documentation
 (package hacl-star)
  (mld_files index))

(rule
  (deps raw/config.h)
  (target config.h)
  (action (copy %{deps} %{target})))
