opam-version: "2.0"
name: "hacl-star"
synopsis: "OCaml API for EverCrypt/HACL*"
description: """
Documentation for this library can be found
[here](https://hacl-star.github.io/ocaml_doc/hacl-star/index.html).
"""
maintainer: "Victor Dumitrescu <victor.dumitrescu@nomadic-labs.com>"
authors: [ "Project Everest" ]
license: "Apache-2.0"
homepage: "http://github.com/dune-universe/hacl-star-dune"
bug-reports: "https://github.com/project-everest/hacl-star/issues"
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" {>= "2.9"}
  "hacl-star-raw" {= version}
  "zarith"
  "cppo" {build}
  "odoc" {with-doc}
]
available: [
  os = "freebsd" | os-family != "bsd"
]
build: [
  [
    "dune" "build" "-p" name "-j" jobs
    "@doc" {with-doc}
  ]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/dune-universe/hacl-star-dune.git"
