(library
  (name lib_Hacl_Spec_bindings)
  (public_name hacl-star-raw.lib-Hacl_Spec-bindings)
  (wrapped false)
  (libraries ctypes ctypes.stubs)
  (flags (:standard -warn-error -33))
  (modules Hacl_Spec_bindings))

(library
  (name lib_EverCrypt_Error_bindings)
  (public_name hacl-star-raw.lib-EverCrypt_Error-bindings)
  (wrapped false)
  (libraries ctypes ctypes.stubs)
  (flags (:standard -warn-error -27-33))
  (modules EverCrypt_Error_bindings))

(library
  (name lib_Hacl_GenericField32_bindings)
  (public_name hacl-star-raw.lib-Hacl_GenericField32-bindings)
  (wrapped false)
  (libraries ctypes ctypes.stubs)
  (flags (:standard -warn-error -27-33))
  (modules Hacl_GenericField32_bindings))

(library
  (name lib_Hacl_Bignum256_bindings)
  (public_name hacl-star-raw.lib-Hacl_Bignum256-bindings)
  (wrapped false)
  (libraries ctypes ctypes.stubs)
  (flags (:standard -warn-error -27-33))
  (modules Hacl_Bignum256_bindings))

(executable
 (name gen_dune_rules)
 (libraries dune_modules)
 (modules Gen_dune_rules))

(rule
 (mode promote)
 (action
   (with-stdout-to dune.inc
                   (run ./gen_dune_rules.exe))))

(include dune.inc)

(library
  (name lib_bindings)
  (public_name hacl-star-raw.lib-bindings)
  (libraries lib_bindings_gen)
  (modules)
  (wrapped false))
